deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moyeo-trip-api
  namespace: stable
spec:
  progressDeadlineSeconds: 900
  selector:
    matchLabels:
      app: moyeo-trip-api
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: moyeo-trip-api
    spec:
      containers:
        - image: ghcr.io/moyeotrip/moyeotrip_backend:latest
          imagePullPolicy: Always
          name: moyeo-trip-api
          resources:
            limits:
              cpu: 800m
              memory: 2048Mi
          ports:
            - name: http
              containerPort: 8080
            - name: management
              containerPort: 8888
          startupProbe:
            httpGet:
              port: 8888
              path: /actuator/health/liveness
            periodSeconds: 10
            failureThreshold: 40
          readinessProbe:
            httpGet:
              port: 8888
              path: /actuator/health/readiness
            periodSeconds: 5
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              port: 8888
              path: /actuator/health/liveness
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
      volumes:
        - name: share-vol
          emptyDir: {}
      imagePullSecrets:
        - name: ghcr-login-secret
      nodeSelector:
        performance: high
