deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: moyeo-trip-api-svc
  namespace: stable
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: moyeo-trip-api
